src/objects/Package_Product_Family__c.object
<CustomObject>
    <description>[Kristine Campang 10/14/2014] Item#36 Building Remaining Items v07.</description>
    <fields>
        <fullName>Package_Name__c</fullName>
        <description>[Kristine Campang 10/14/2014]. Item # 36. Build Remaining Items v07.</description>
        <label>Package Name</label>
        <referenceTo>Package__c</referenceTo>
        <relationshipLabel>Package Product Families</relationshipLabel>
        <relationshipName>Package_Product_Families</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Product_Family_Text__c</fullName>
        <formula>Product_Family__r.Product_Family__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Family Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Family__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Product Family</label>
        <referenceTo>Product_Family__c</referenceTo>
        <relationshipLabel>Package Product Families</relationshipLabel>
        <relationshipName>Package_Product_Families</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <label>Package Product Family</label>
    <nameField>
        <displayFormat>PPF-{0000}</displayFormat>
        <label>PPF Record No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Package Product Families</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>PackageRecordTypeAddOn</fullName>
        <active>true</active>
        <description>When you click the New Package Product Family button from the package screen, it must validate that the current package for which you’re adding records is of type: Add-On.</description>
        <errorConditionFormula>NOT(ISPICKVAL( Package_Name__r.Package_Type__c, &quot;Add On&quot;))</errorConditionFormula>
        <errorMessage>Package Product Family can only be added for Package Type: Add-On</errorMessage>
    </validationRules>
</CustomObject>